fix/feat: listing creation, layout z-indexes / add to listing in objects list, make deletion dialog dismissable

--- a/frontend/src/app/shared/components/select/select.component.scss
+++ b/frontend/src/app/shared/components/select/select.component.scss
@@ -2,7 +2,7 @@
   --row-height: 36px;
   .rx-select-viewport {
     height: calc(var(--row-height) * 6);
-    width: 300px;
+    width: 100%;
     overflow: auto;
     display: block;
   }
