--- a/frontend/src/assets/layout/_menu.scss
+++ b/frontend/src/assets/layout/_menu.scss
@@ -4,7 +4,7 @@
   position: fixed;
   width: 15rem;
   height: calc(100vh - 8rem);
-  z-index: 999;
+  z-index: 1004;
   overflow-y: auto;
   user-select: none;
   top: 6rem;
